--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "build": "yarn workspaces run build",
     "build:dev": "yarn workspaces run build:dev",
+    "ci:pr-checks": "./.bin/pr-checks",
     "clean:all": "yarn workspaces run clean && rimraf ./node_modules",
     "clean:dist": "yarn workspaces run clean",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
@@ -29,7 +30,6 @@
     "postbuild": "rimraf \"./packages/*/{esm,dist}/{,**/}__*__\"",
     "prettier": "prettier --write '@(packages|scripts)/**/*.@(js|css)' '*.js'",
     "prettier:validate": "prettier-check '@(packages|scripts)/**/*.@(js|css)' '*.js'",
-    "prettier:check": "prettier --list-different '@(packages|scripts)/**/*.@(js|css)' '*.js'",
     "stage:venia": "yarn workspace @magento/venia-concept run start; cd - >/dev/null",
     "stats:venia": "yarn workspace @magento/venia-concept run build:analyze && yarn workspace @magento/venia-concept run stats",
     "storybook:venia": "yarn workspace @magento/venia-concept run storybook",
@@ -50,7 +50,7 @@
     "chalk": "~2.4.2",
     "chokidar": "~2.1.2",
     "coveralls": "~3.0.3",
-    "danger": "~7.0.14",
+    "danger": "~7.0.17",
     "eslint": "~5.14.1",
     "eslint-plugin-babel": "~5.3.0",
     "eslint-plugin-graphql": "~3.0.3",
